--- a/bitrise-screenshot-automation/Base.lproj/Main.storyboard
+++ b/bitrise-screenshot-automation/Base.lproj/Main.storyboard
@@ -57,7 +57,7 @@
                             <view contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="U1h-yl-pQm" userLabel="City View">
                                 <rect key="frame" x="0.0" y="734" width="414" height="79"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v5y-cQ-Jta">
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v5y-cQ-Jta">
                                         <rect key="frame" x="338" y="20" width="56" height="39"/>
                                         <accessibility key="accessibilityConfiguration" identifier="Zoom"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
